[gd_scene load_steps=5 format=3 uid="uid://cesn53dghx55u"]

[ext_resource type="Texture2D" uid="uid://bvrbs8bysnegt" path="res://assets/2d/ui_elements/staff.png" id="1_7r6wl"]
[ext_resource type="Script" path="res://scripts/ui/PowerUpMenu/StaffUI.gd" id="1_56j6k"]
[ext_resource type="PackedScene" uid="uid://ccyl4sjq5dh06" path="res://scenes/ui/StaffPowerupSlot.tscn" id="3_n2oec"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0m0nt"]
bg_color = Color(0.329412, 0, 0.152941, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="StaffUI" type="Control"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 3
anchor_top = 0.37037
anchor_right = 0.234375
anchor_bottom = 0.62963
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_56j6k")
metadata/_edit_use_anchors_ = true

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0m0nt")

[node name="StaffTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(110, 380)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 190.0
offset_top = -130.001
offset_right = 300.0
offset_bottom = 249.999
grow_horizontal = 2
grow_vertical = 0
rotation = 1.5708
texture = ExtResource("1_7r6wl")
expand_mode = 5

[node name="StaffPowerupsSlotContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(350, 110)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.111111
anchor_top = 0.0714283
anchor_right = 0.888889
anchor_bottom = 0.464284
grow_horizontal = 2
theme_override_constants/separation = 35
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StaffPowerupSlot" parent="StaffPowerupsSlotContainer" instance=ExtResource("3_n2oec")]
layout_mode = 2

[node name="StaffPowerupSlot2" parent="StaffPowerupsSlotContainer" instance=ExtResource("3_n2oec")]
layout_mode = 2

[node name="StaffPowerupSlot3" parent="StaffPowerupsSlotContainer" instance=ExtResource("3_n2oec")]
layout_mode = 2
